--- a/test/fixtures/photos.yml
+++ b/test/fixtures/photos.yml
@@ -1,11 +1,5 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  image: MyString
+  name: "Sunset"
   gallery: one
-
-two:
-  name: MyString
-  image: MyString
-  gallery: two
